# torch_practice

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.gpu  jupyter_lab_config.py  matplotlibrc  overrides.json
pigimaru/: models.py  train.py
tests/: test_global.py
