[tool.poetry]
name = "pigimaru"
version = "0.1.0"
description = ""
authors = ["ryomazda"]

[tool.poetry.scripts]
train = 'pigimaru.train:__main__'

[tool.poetry.dependencies]
python = "^3.9"
# It's difficult to specify torch version. I just leave it as optional for now...
# https://github.com/python-poetry/poetry/issues/824
torch = { version = "^1.7.1", optional = true }
transformers = { version = "^4.1.1", extras = ["ja"] }
pandas = { version = "^1.1.4", optional = true }
scikit-learn = { version = "^0.24.0", optional = true }
matplotlib = { version =  "^3.3.3", optional = true }
jedi = { version =  "<0.18.0", optional = true }  # https://github.com/ipython/ipython/issues/12740
jupyterlab = { version =  "^3.0.0", optional = true }
jupyterlab-vim = { version =  "^0.13.0", optional = true }
ipywidgets = { version =  "^7.6.3", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
mypy = "^0.790"
autopep8 = "^1.5.4"

[tool.poetry.extras]
train = ["pandas", "scikit-learn", "matplotlib"]
jupyter = ["pandas", "scikit-learn", "matplotlib", "jedi", "jupyterlab", "jupyterlab-vim", "ipywidgets"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
